Implement DB-backed CRUD for matches, teams, tickets, and tournaments with validation